--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,13 @@
 html,body{
     height:100%;
-    width:100%;
+    width:100vw;
+    margin:0;
 };
 
-img{
-    width:100%;
+.background{
+    width:100vw;
 };
 
 .divBackground{
-    width:100%;
+    width:100vw;
 };
