--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-html,body{
+html, body{
     height:100%;
     width:100vw;
     margin:0;
@@ -10,4 +10,5 @@ html,body{
 
 .divBackground{
     width:100vw;
+    background-color: blue;
 };
