--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,17 +2,13 @@ html, body{
     height:100%;
     width:100vw;
     margin:0;
-};
+}
 
-.background{
-    width:100vw;
-};
+img{
+    height:100%;
+}
 
 .divBackground{
-    width:100vw;
-    background-color: blue;
-};
-
-.divNuages{
-    background-color: aquamarine;
+    width:100%;
+    position:absolute;
 }
