--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,25 +1,59 @@
 html, body{
     height:100%;
-    width:100vw;
+    width:100%;
     margin:0;
+    position: relative;
 }
 
 img{
     width:100%;
 }
 
-.divBackground{
-    width:100%;
-    position: relative;;
+.wrapper{
+    max-width:1920px;
+    max-height:100vh;
+    position: absolute;
 }
 
+.divBackground{
+    width:100%;
+}
+
+ /*NUAGES*/
+
 .divNuages{
-    width:9%;
+    width:100%;
+    height:25%;
+    position:absolute;
+    top:0;
+    left:0;
 }
 
 .nuage_01{
-    position: relative;
+    width:9%;
+    position:absolute;
+    top:75%;
+    left:15%;
+    transform:translate(-50%,-50%);
 }
+
+.nuage_02{
+    width:9%;
+    position: absolute;
+    top:100%;
+    left:90%;
+    transform:translate(-50%,-50%);
+}
+
+.nuage_03{
+    width:14%;
+    position:absolute;
+    left:50%;
+    top:50%;
+    transform:translate(-50%,-50%);
+}
+
+
 
 .divBlocs, .divCoins, .divStar{
     width:3%;
