--- a/stylesheet.css
+++ b/stylesheet.css
@@ -8,9 +8,9 @@ html, body{
 
 .wrapper{
     width:100%;
-    max-width:1920px;
+    max-width:1626px;
     height:100%;
-    max-height:calc(100vh - 100px);
+    max-height:100vh;
     position: absolute;
     top:0;
     left:0;
@@ -18,14 +18,17 @@ html, body{
 
 .divBackground{
     width:100%;
-    max-width:1920px;
     height:100%;
-    max-height:calc(100vh - 100px);
+    max-height:100vh;
 }
 
-img{
+.divBackground img{
     width:100%;
+    max-height:100vh;
 }
+
+
+
  /*NUAGES*/
 
 .divNuages{
