--- a/stylesheet.css
+++ b/stylesheet.css
@@ -30,6 +30,8 @@ img{
     max-height:100vh;
 }
 
+/* Nuages */
+
 .divNuages{
     width:100%;
     height:15%;
@@ -39,7 +41,7 @@ img{
 }
 
 .nuage_01{
-    width:90px;
+    width:9%;
     position:absolute;
     top:75%;
     left:15%;
@@ -62,17 +64,7 @@ img{
     transform:translate(-50%,-50%);
 }
 
-.divCoins, .divStar{
-    width:3%;
-}
-
-.divTuyau, .divDrapeaux{
-    width:6%;
-}
-
-.divPoteau{
-    width:4%;
-}
+/*Blocks*/
 
 .divBlocs{
     width:15%;
@@ -96,6 +88,8 @@ img{
     width:20%;
 }
 
+/*Coins*/
+
 .divCoins{
     display:flex;
     justify-content:space-between;
@@ -109,10 +103,49 @@ img{
     width:19%;
 }
 
+/*Video*/
+
 .divVideo{
     position:absolute;
     left:50%;
     top:50%;
     transform: translate(-50%,-50%);
     display:none;
+}
+
+/*Tuyau*/
+
+.divTuyau{
+    position:absolute;
+    top:33%;
+    left:60%;
+    width:6%;
+}
+
+/* Poteau */
+
+.divPoteau{
+    width:4%;
+    position:absolute;
+    top:20%;
+    left:85%;
+}
+
+/*Drapeau*/
+
+.divDrapeaux{
+    width:6%;
+    position:absolute;
+    top:22%;
+    left:87%;
+}
+
+.divDrapeaux img{
+    position:absolute;
+}
+
+/*Star*/
+
+.divStar{
+    width:3%;
 }
