--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,7 +12,6 @@ img{
 .wrapper{
     width:100%;
     max-width:1626px;
-    height:100%;
     max-height:100vh;
     position: absolute;
     top:0;
@@ -21,7 +20,7 @@ img{
 
 .divBackground{
     width:100%;
-    height:100%;
+    
     max-height:100vh;
 }
 
@@ -68,9 +67,9 @@ img{
 
 .divBlocs{
     width:15%;
-    height:19%;
+    height:25%;
     position:absolute;
-    top:20%;
+    top:40%;
     left:10%;
 }
 
@@ -95,7 +94,7 @@ img{
     justify-content:space-between;
     width:13%;
     position:absolute;
-    top:35%;
+    top:75%;
     left:30%;
 }
 
@@ -109,15 +108,19 @@ img{
     position:absolute;
     left:50%;
     top:50%;
-    transform: translate(-50%,-50%);
-    display:none;
+    transform: translate(-40%,-70%);
+    width:45%;
+}
+
+.video{
+    width:100%;
 }
 
 /*Tuyau*/
 
 .divTuyau{
     position:absolute;
-    top:33%;
+    top:69.4%;
     left:60%;
     width:6%;
 }
@@ -127,7 +130,7 @@ img{
 .divPoteau{
     width:4%;
     position:absolute;
-    top:20%;
+    top:42%;
     left:85%;
 }
 
@@ -136,8 +139,8 @@ img{
 .divDrapeaux{
     width:6%;
     position:absolute;
-    top:22%;
-    left:87%;
+    top:2462%;
+    left:87.2%;
 }
 
 .divDrapeaux img{
@@ -148,4 +151,6 @@ img{
 
 .divStar{
     width:3%;
+    position:absolute;
+    top:0%;
 }
