--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,8 +15,9 @@ img{
     max-width:1626px;
     max-height:100vh;
     position: absolute;
-    top:0;
-    left:0;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
     overflow:hidden;
 }
 
@@ -94,6 +95,7 @@ img{
 
 .divBlocs img{
     width:20%;
+    cursor: pointer;
 }
 
 /*Coins*/
@@ -116,6 +118,7 @@ img{
 
 .divCoins img:hover{
     transform:translateY(-25%);
+    cursor: pointer;
 }
 
 .animationCoin{
@@ -225,10 +228,15 @@ img{
     height:90%;
     width:50%;
     -webkit-appearance: none;
-    background-image: url("https://imgur.com/qTuJmw5.png");
+    background-image: url("https://imgur.com/4S0cTde.png");
     background-size: contain;
 	background-repeat:no-repeat;
     transform:rotate(90deg);
+    cursor: grab;
+}
+
+.sliderVolume::-webkit-slider-thumb:active{
+    cursor: grabbing;
 }
 
 /*Drapeau*/
@@ -297,3 +305,7 @@ img{
         animation-timing-function: ease-in;
     }
 }
+
+
+/* Pseudo-éléments */
+
